{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 186,
  "lineage": "0a30b7e3-da4b-57f9-1b38-054f54ecf0a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PruebaEC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0298d169be5006679",
            "arn": "arn:aws:ec2:us-west-1:405115285418:instance/i-0be2a4fae7035e576",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be2a4fae7035e576",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-038a0a1a778b296aa",
            "private_dns": "ip-10-0-0-215.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.215",
            "public_ip": "54.241.82.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c33411e532704143",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06916512f47ad9c11",
            "tags": {
              "Name": "apache-cerberus-dev-California"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "apache-cerberus-dev-California",
              "Owner": "Jeyson",
              "Project": "cerberus",
              "env": "dev",
              "region": "California"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be8b83ceb7511af9"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_ec2",
            "aws_subnet.public_subnet_primaria",
            "aws_vpc.vpc_terraform",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:405115285418:internet-gateway/igw-0598b30362a17fa1e",
            "id": "igw-0598b30362a17fa1e",
            "owner_id": "405115285418",
            "tags": {
              "Name": "ig vpc-cerberus-dev-California"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "ig vpc-cerberus-dev-California",
              "Owner": "Jeyson",
              "Project": "cerberus",
              "env": "dev",
              "region": "California"
            },
            "vpc_id": "vpc-0fdcdc2acd5da19d7"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:405115285418:route-table/rtb-01dac18d90d303a74",
            "id": "rtb-01dac18d90d303a74",
            "owner_id": "405115285418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0598b30362a17fa1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public crt-cerberus-dev-California"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "Public crt-cerberus-dev-California",
              "Owner": "Jeyson",
              "Project": "cerberus",
              "env": "dev",
              "region": "California"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdcdc2acd5da19d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b5a7e7d90fcaaa8",
            "route_table_id": "rtb-01dac18d90d303a74",
            "subnet_id": "subnet-06916512f47ad9c11"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet_primaria",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:405115285418:security-group/sg-0be8b83ceb7511af9",
            "description": "Allow SSH and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be8b83ceb7511af9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "405115285418",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance SG-cerberus-dev-California"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "Public Instance SG-cerberus-dev-California",
              "Owner": "Jeyson",
              "Project": "cerberus",
              "env": "dev",
              "region": "California"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdcdc2acd5da19d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:405115285418:subnet/subnet-077cf9a07ed0373e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077cf9a07ed0373e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "405115285418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet_1-cerberus-dev-California"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "Private Subnet_1-cerberus-dev-California",
              "Owner": "Jeyson",
              "Project": "cerberus",
              "env": "dev",
              "region": "California"
            },
            "vpc_id": "vpc-0fdcdc2acd5da19d7"
          },
          "dependencies": [
            "aws_subnet.public_subnet_primaria",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_primaria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:405115285418:subnet/subnet-06916512f47ad9c11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06916512f47ad9c11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "405115285418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet_temp-cerberus-dev-California"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "Public Subnet_temp-cerberus-dev-California",
              "Owner": "Jeyson",
              "Project": "cerberus",
              "env": "dev",
              "region": "California"
            },
            "vpc_id": "vpc-0fdcdc2acd5da19d7"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:405115285418:vpc/vpc-0fdcdc2acd5da19d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c62ca4bad62bfb2b",
            "default_route_table_id": "rtb-054fec156eaf68e2e",
            "default_security_group_id": "sg-0ca8fbbcaf0f2cf92",
            "dhcp_options_id": "dopt-b4afbfd3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fdcdc2acd5da19d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054fec156eaf68e2e",
            "owner_id": "405115285418",
            "tags": {
              "Name": "VPC_TERRAFORM-cerberus-dev-California",
              "env": "Dev"
            },
            "tags_all": {
              "IAC": "Terraform",
              "Name": "VPC_TERRAFORM-cerberus-dev-California",
              "Owner": "Jeyson",
              "Project": "cerberus",
              "env": "Dev",
              "region": "California"
            }
          }
        }
      ]
    }
  ]
}